--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -29,7 +29,7 @@
           <div class="blankHTiny"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
-   
+
           <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
         </div>
@@ -38,7 +38,7 @@
           <div class="blankHTiny"></div>
 
           <h1 class="specialTextTitle fontWeight700">Designing experiences that are </h1>
-   
+
           <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
         </div>
@@ -46,14 +46,14 @@
           <div class="element">
             <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
             <div class="blankHTiny"></div>
-  
+
             <h1 class="specialTextTitle fontWeight700">Designing experiences</h1>
             <h1 class="specialTextTitle fontWeight700">that are </h1>
-  
+
             <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> smooth, </h1>
-  
+
             <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> intuitive, </h1>
-  
+
             <h1 class="specialTextTitleMidLine fontWeight700 colorLandingText"> impactful</h1>
             <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
           </div>
@@ -100,7 +100,7 @@
       </div>
       <div class="Grid-cell centerVH">
         <div class="dropdownSM">
-          <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
+          <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="./icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
             <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://vickywang.me" target="_blank">Share
               on LinkedIn</a>
@@ -136,24 +136,7 @@
       spacing:''
       }) %>
       <!-- Arrow -->
-
-
-
-
-
-      <div class="blankHXS"></div>
-
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Business Scheduling, Onboarding, Subscription </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
 
       <div class="wrapper">
 
@@ -162,8 +145,8 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                
-                  <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience">
+
+                <img class="borderRadiusL" src="/projectImages/b2b_booking.gif" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -197,13 +180,23 @@
 
           </div>
         </div>
-        <div class="blankHS"></div>
+
+
+      </div>
+      <div class="blankHXS"></div>
+      <hr class="wrapperM">
+      <div class="blankHXS"></div>
+      <div class="wrapper">
+
+
+
+
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                  <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience">
+                <img src="/projectImages/Cover_b2b_subscription.gif" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -221,9 +214,7 @@
               </h1>
               <div class="blankHTiny"></div>
               <div class="blankHTiny"></div>
-
               <ul>
-
                 <li class="listCircle"> <span class="TextPoppins fontWeight500">Streamlined Onboarding:</span> Reduced average onboarding time by 30% and increased completion rates by 40%.
                 </li>
                 <li class="listCircle"> <span class="TextPoppins fontWeight500">Improved User Satisfaction:</span> Enhanced clarity and guidance, boosting satisfaction by 25%.
@@ -231,40 +222,24 @@
                 <li class="listCircle"> <span class="TextPoppins fontWeight500">Increased Conversions:</span> Achieved a 20% growth in trial-to-paid subscriptions.
 
                 </li>
-
-
-
-
-
               </ul>
-
             </div>
- 
           </div>
-
         </div>
+      </div>
+      <div class="wrapper">
 
 
-        <div class="blankHS"></div>
+        <div class="blankHXS"></div>
         <hr class="wrapperM">
-        <div class="blankHS"></div>
-        <div class="wrapper">
-          <div class="Grid Grid--full Grid--gutters u-textCenter">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1 class="TextPoppins fontWeight100 Grey800"> Mobile Consumer-Facing Booking Experience </h1>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="blankHXS"></div>
 
-        <div class="blankHXXS"></div>
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                  <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience">
+                <img src="/projectImages/mobile_b2c_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -298,33 +273,22 @@
               </ul>
 
             </div>
- 
+
           </div>
 
         </div>
 
       </div>
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
       <hr class="wrapperM">
-      <div class="blankHS"></div>
-
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Simplify SaaS Booking App </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXXS"></div>
+      <div class="blankHXS"></div>
       <div class="wrapper">
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                  <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience">
+                <img src="/projectImages/b2b_booking.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -359,9 +323,9 @@
 
         </div>
       </div>
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
       <hr class="wrapperM">
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
 
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
@@ -374,15 +338,16 @@
           </div>
         </div>
       </div>
-      <div class="blankHXXS"></div>
-      <div class="wrapper">
+      <div class="blankHXS"></div>
+      <hr class="wrapperM">
+      <div class="blankHXS"></div>      <div class="wrapper">
 
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background1">
-                  <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience">
+                <img src="/projectImages/savings_calculator.svg" alt="Business Booking Experience">
               </div>
             </div>
 
@@ -412,7 +377,7 @@
               </ul>
 
             </div>
- 
+
           </div>
         </div>
         <div class="blankHS"></div>
@@ -421,7 +386,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background3">
-                  <img src="/projectImages/rx_zero.png" alt="RX Zero">
+                <img src="/projectImages/rx_zero.png" alt="RX Zero">
               </div>
             </div>
           </div>
@@ -481,7 +446,7 @@
             <div class="element">
 
               <div class="paddingXL borderRadiusL gradient_background2">
-                  <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience">
+                <img src="/projectImages/admin_panel.svg" alt="Business Booking Experience">
               </div>
             </div>
           </div>
@@ -816,7 +781,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_understand.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_understand.svg" alt="Understand">
                 <h2 data-aos="fade-up"> <strong> Understand</strong> </h2>
                 <h3>Understand business goals and user needs using both qualitative and quantitative data to make informed UX decisions.
                 </h3>
@@ -841,7 +806,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <img class="iconMax" src="icon/landing_facilitate.svg" alt="Collaborate">
+                <img class="iconMax" src="icon/landing_facilitate.svg" alt="Facilitate">
                 <h2 data-aos="fade-up"> <strong> Facilitate</strong> </h2>
                 <h3>Manage the design process with clear deadlines to stay on track. Document and review each step to create effective, impactful designs.
                 </h3>
@@ -1283,10 +1248,121 @@
 
   <%- include(`${templatePath}/shared/comp_closingMessage`, { version: '', message: ''}) %>
   <%- include(`${templatePath}/shared/comp_backTop`) %>
-  <%- include(`${templatePath}/shared/block_nav_footer`, { 
-    iconHoverColor: 'hoverWhite',
-    footerBackgroundColor:'colorBgVW'
-  }) %>
+  <footer class="borderTop colorBgVW ">
+
+    <div class="blankHXS"></div>
+    <div class="wrapper">
+      <div class="element">
+        <div class="Grid Grid--gutters Grid--1of4">
+          <div class="Grid-cell">
+            <div class="element">
+              <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
+            </div>
+            <div class="Grid Grid--gutters">
+              <div class="ClipboardBoxIconOnly">
+                <button class="ClipboardIconOnly">
+                  <img title="Copy Email Address to Clipboard" class="iconM  hoverWhite paddingS fitContent borderRadiusMax" src="/icon/mail.svg" alt="LinkedIn">
+                  <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                </button>
+              </div>
+              <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+              </a>
+
+              <a target="_blank" href="https://github.com/vicky-wyq">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+              </a>
+
+              <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+                <img class="iconM hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+              </a>
+
+            </div>
+          </div>
+          <div class="Grid-cell">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <h5> <strong> Projects </strong> </h5>
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400"> Business Booking Experience </h6>
+                <h6>For pet business owners booking appointments for their customers</h6>
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400"> Customer Booking Experience
+                </h6>
+                <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
+                </h6>
+                <h6>Optimize the B2B onboarding and subscription experience</h6>
+
+
+
+
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400"> RX Zero</h6>
+                <h6>Subscription-based generic medication selling</h6>
+
+
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400"> Savings Calculator</h6>
+
+                <h6>Uncover Prescription Meds Savings</h6>
+
+                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400">Admin Panel</h6>
+                <h6>Empowering CX managers and sales teams</h6>
+              </div>
+
+
+              <div class="Grid-cell">
+                <h5> <strong> Experiments </strong> </h5>
+                <div class="blankHTiny"></div>
+                <a href="/glorify/">
+                  <h6 class="fontWeight400"> Glorify</h6>
+                </a>
+                <h6>Elevating Community Involvement</h6>
+
+                <div class="blankHTiny"></div>
+
+                <a href="/appointa/">
+                  <h6 class="fontWeight400"> APPOINTA</h6>
+                </a>
+                <h6>Simplifying Interview Coordination</h6>
+
+                <div class="blankHTiny"></div>
+                <a href="/seer/">
+                  <h6 class="fontWeight400">SEER</h6>
+                </a>
+                <h6>Empowering Brand Managers with Insights</h6>
+
+
+
+              </div>
+
+
+
+
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+      <div class="blankHXS"></div>
+      <div class="Grid Grid--full Grid--gutters">
+        <div class="Grid-cell">
+          <div class="footerBorder">
+            <div class="element">
+              <h5 class="Grey700"> © 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </footer>
 
   <!-- The Modal -->
   <div id="modal" class="modal">
