--- a/templates/shared/block_nav_footer.ejs
+++ b/templates/shared/block_nav_footer.ejs
@@ -124,7 +124,7 @@
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
-              <h5 class="Grey700"> &#169; 2020 - 2025 &#8212; vickywang.me | Shaping seamless digital experiences.</h5>
+              <h5 class="Grey700"> &#169; 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
             </div>
           </div>
         </div>
@@ -132,3 +132,4 @@
     </div>
 
   </footer>
+
