--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -136,7 +136,6 @@
       spacing:''
       }) %>
       <!-- Arrow -->
-      <div class="blankHXXS"></div>
 
       <div class="wrapper">
 
@@ -160,11 +159,10 @@
                  colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
 
-              <h1 class="specialTextS fontWeight700">Business Booking Experience</h1>
+              <h1 class="fontWeight700">Faster Appointment Management </h1>
 
-              <h4 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h4>
+           
               <ul>
 
                 <li class="listCircle">Reduced average booking time from 5 minutes to less than 1 minute, making the process over 80% faster.
@@ -210,10 +208,8 @@
                 colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
-              <h1 class="specialTextS fontWeight700">Optimizing SaaS Subscription Growth
+              <h1 class="fontWeight700">Optimizing SaaS Subscription Growth
               </h1>
-              <div class="blankHTiny"></div>
-              <div class="blankHTiny"></div>
               <ul>
                 <li class="listCircle"> <span class="TextPoppins fontWeight500">Streamlined Onboarding:</span> Reduced average onboarding time by 30% and increased completion rates by 40%.
                 </li>
@@ -252,10 +248,7 @@
                 colorTxt: 'color_VW_Pink800'
               }) %>
               <div class="blankHTiny"></div>
-              <h1 class="specialTextS fontWeight700">Customer Booking Experience</h1>
-
-              <h3 class="colorLandingText fontWeight700">Enhancing the Consumer Booking Experience
-              </h3>
+              <h1 class="fontWeight700">Customer Booking Experience</h1>
               <ul>
 
                 <li class="listCircle">Booking Conversion Rate: Improved by 169% (from 15% to 40%)
@@ -300,21 +293,12 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
-              <h1 class="specialTextS fontWeight700">From White-Glove to Self-Service</h1>
-
-              <h3 class="colorLandingText fontWeight700">Shifting from a white-glove service to a user-friendly self-service platform.
-              </h3>
+              <h1 class="fontWeight700">From White-Glove to Self-Service</h1>
               <ul>
-
                 <li class="listCircle">Simplified the onboarding process
                 </li>
-
                 <li class="listCircle">
                   Enabling B2B users to complete onboarding independently without requiring hands-on assistance </li>
-
-
-
               </ul>
 
             </div>
@@ -326,22 +310,7 @@
       <div class="blankHXS"></div>
       <hr class="wrapperM">
       <div class="blankHXS"></div>
-
       <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Consumer-Facing Medication Purchase Experience
-
-              </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXS"></div>
-      <hr class="wrapperM">
-      <div class="blankHXS"></div>      <div class="wrapper">
-
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -360,11 +329,9 @@
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
-              <h1 class="specialTextS fontWeight700">Savings Calculator</h1>
+              <h1 class="fontWeight700">Savings Calculator</h1>
 
-              <h3 class="colorLandingText fontWeight700">Uncover Prescription Meds Savings
-              </h3>
+
               <ul>
 
                 <li class="listCircle">Highlighting the Economic Advantage of RX Zero
@@ -380,7 +347,14 @@
 
           </div>
         </div>
-        <div class="blankHS"></div>
+      </div>
+
+
+      <div class="blankHXS"></div>
+      <hr class="wrapperM">
+      <div class="blankHXS"></div>
+      <div class="wrapper">
+
         <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -398,24 +372,14 @@
                  colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
 
-              <h1 class="specialTextS fontWeight700">Online Med Purchase </h1>
-
-              <h3 class="colorLandingText fontWeight700">Focus on RX Zero model, moving away from RX Local and Telemedicine services
-
-              </h3>
+              <h1 class="fontWeight700">Online Med Purchase </h1>
               <ul>
-
                 <li class="listCircle">Explore the primary challenges individuals with chronic illnesses.
                 </li>
-
-
                 <li class="listCircle">
                   Understand how individuals with chronic illnesses prioritize privacy, speed, support, and information when buying medication online
                 </li>
-
-
               </ul>
 
             </div>
@@ -425,20 +389,13 @@
         </div>
 
       </div>
-      <div class="blankHS"></div>
-      <hr class="wrapperM">
-      <div class="blankHS"></div>
 
-      <div class="wrapper">
-        <div class="Grid Grid--full Grid--gutters u-textCenter">
-          <div class="Grid-cell">
-            <div class="element">
-              <h1 class="TextPoppins fontWeight100 Grey800"> Healthcare Admin Panel Design </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="blankHXXS"></div>
+
+
+      <div class="blankHXS"></div>
+      <hr class="wrapperM">
+      <div class="blankHXS"></div>
+
       <div class="wrapper">
 
         <div class="Grid Grid--holly-grail Grid--center">
@@ -460,9 +417,8 @@
               }) %>
               <div class="blankHTiny"></div>
 
-              <h1 class="specialTextS fontWeight700">Admin Panel</h1>
+              <h1 class="fontWeight700">Admin Panel For CX Managers & Sales Teams</h1>
 
-              <h3 class="colorLandingText fontWeight700">For CX Managers & Sales Teams </h3>
               <ul>
 
                 <li class="listCircle"> Tracking customer interactions
@@ -494,7 +450,7 @@
     <!-- Arrow -->
     <%- include('shared/comp_textualElements_arrow', {message: 'Experiments' }) %>
     <!-- Arrow -->
-    <div class="blankHXXS"></div>
+    <div class="blankHTiny"></div>
 
     <div class="wrapper">
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -614,15 +570,13 @@
           <div class="Grid-cell aside aside-2">
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
-                chipSmallTxt: 'Start from Scratch',
+                chipSmallTxt: 'From Scratch | Design & Implementation',
                 colorBg: 'colorBg_VW_Pink200',
                 colorTxt: 'color_VW_Pink800'
               }) %>
-              <div class="blankHTiny"></div>
 
-              <h1 class="specialTextS fontWeight700">Design System Creation & Optimization</h1>
+              <h1 class="fontWeight700">Design System Creation & Optimization</h1>
 
-              <h3 class="colorLandingText fontWeight700">Design & Implementation</h3>
               <ul>
 
                 <li class="listCircle">Efficiently structured components for seamless site navigation.
@@ -679,7 +633,7 @@
             <h1 class="specialTextL"> About Me</h1>
             <div class="blankHTiny"></div>
 
-            <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
+            <h2 class="colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
           </div>
         </div>
       </div>
@@ -1284,9 +1238,8 @@
               <div class="Grid-cell">
                 <h5> <strong> Projects </strong> </h5>
                 <div class="blankHTiny"></div>
-                <h6 class="fontWeight400"> Business Booking Experience </h6>
-                <h6>For pet business owners booking appointments for their customers</h6>
-                <div class="blankHTiny"></div>
+                <h6 class="fontWeight400">pet business owners booking appointments for their customers</h6>
+        
                 <h6 class="fontWeight400"> Customer Booking Experience
                 </h6>
                 <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
